--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    Select Your Player:
+    <select id="selectChar" onChange="changeChar()">
+      <option value="boy">Boy</option>
+      <option value="cat-girl">Cat Girl</option>
+      <option value="horn-girl">Horn Girl</option>
+      <option value="pink-girl">Pink Girl</option>
+      <option value="princess-girl">Princess Girl</option>
+    </select>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
